# Spline-based-DeepLearning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example_net.cpp  layers.cpp  layers.hpp  main.cpp  setup.py  smartSplines.cpp  smartSplines.hpp
.github/workflows/: CMakeLists.txt  py_test.yml  test.yml
PySplineNetLib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: README.md  cpp_CTensor.md  cpp_splines.md  py_splines.md
examples/: Iris_Net.cpp  example_CTensor.cpp  example_layer.cpp  example_net.cpp  example_network.cpp  example_spline.cpp
include/: layers.hpp  splines.hpp
include/SplineNetLib/: CTensor.hpp  CTensorFunc.hpp  CTensorUtils.hpp  SplineNet.hpp  layers.hpp  splines.hpp
src/: CTensor.tpp  CTensorFunc.tpp  CTensorUtils.tpp  SplineNet.cpp  SplineNetLib_py.cpp  layers.cpp  splines.cpp
tests/unit_tests/: layer_tests.cpp  network_tests.cpp  py_spline_tests.py  spline_tests.cpp
